# Baixa_avantio

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: Teste.xlsx  main.py
src/backend/data_contract/: model.py  validator.py
src/backend/extract/: bookings_file.py
src/backend/get/: payment_id.py
src/backend/load/: change_payment.py  send_to_excel.py
src/backend/transform/: clear_dataframe.py
src/database/: query.py
src/extract/: bookings_excel.py
src/frontend/: app.py
src/get/: api.py  payment_id.py
src/load/: change_payment.py  send_to_excel.py
src/read/: bookings_excel.py
src/transform/: clear_dataframe.py
src/utils/: credentials.py
